[gd_scene load_steps=6 format=3 uid="uid://dmq6dtxe0xyf3"]

[ext_resource type="Script" path="res://Enemy/MiniEnemy.gd" id="1_gyw28"]
[ext_resource type="SpriteFrames" uid="uid://c1hddibr6bxq" path="res://Enemy/Skeleton/SkeletonSprite.tres" id="1_ugqhi"]
[ext_resource type="Script" path="res://component/SpriteMove/SpriteMove.gd" id="2_akt80"]
[ext_resource type="PackedScene" uid="uid://gnkh7pf8iltu" path="res://component/OverlapPusher/OverlapPusher.res" id="3_u4p6p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ybmja"]

[node name="MiniEnemy" type="Node2D"]
script = ExtResource("1_gyw28")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_ugqhi")
metadata/_edit_lock_ = true

[node name="OverlapPusher" parent="." node_paths=PackedStringArray("body", "source_area") instance=ExtResource("3_u4p6p")]
overlap_layers = 4096
body = NodePath("..")
source_area = NodePath("../Area2D")
push_speed = 20.0

[node name="SpriteMove" type="Node" parent="." node_paths=PackedStringArray("body", "animated")]
script = ExtResource("2_akt80")
body = NodePath("..")
animated = NodePath("../AnimatedSprite2D")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 4096
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_ybmja")
metadata/_edit_lock_ = true

[connection signal="area_entered" from="Area2D" to="OverlapPusher" method="on_area_enter"]
[connection signal="area_exited" from="Area2D" to="OverlapPusher" method="on_area_exit"]
